hw3/FirstClassFunctionsParse.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.18.9 from FirstClassFunctionsParse.y
-----------------------------------------------------------------------------

state 19 contains 1 shift/reduce conflicts.
state 21 contains 1 shift/reduce conflicts.
state 22 contains 1 shift/reduce conflicts.
state 56 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parser -> Exp                               (0)
	Exp -> function '(' PatternList ')' '{' Exp '}'    (1)
	Exp -> var Pattern '=' Exp ';' Exp                 (2)
	Exp -> if '(' Exp ')' Exp ';' else Exp             (3)
	Exp -> Or                                          (4)
	ExpList -> Exp                                     (5)
	ExpList -> ExpList ',' Exp                         (6)
	Pattern -> id                                      (7)
	Pattern -> '(' Pattern ')'                         (8)
	Pattern -> '(' PatternList ')'                     (9)
	PatternList -> Pattern                             (10)
	PatternList -> PatternList ',' Pattern             (11)
	Or -> Or '||' And                                  (12)
	Or -> And                                          (13)
	And -> And '&&' Comp                               (14)
	And -> Comp                                        (15)
	Comp -> Comp '==' Term                             (16)
	Comp -> Comp '<' Term                              (17)
	Comp -> Comp '>' Term                              (18)
	Comp -> Comp '<=' Term                             (19)
	Comp -> Comp '>=' Term                             (20)
	Comp -> Term                                       (21)
	Term -> Term '+' Factor                            (22)
	Term -> Term '-' Factor                            (23)
	Term -> Factor                                     (24)
	Factor -> Factor '*' Primary                       (25)
	Factor -> Factor '/' Primary                       (26)
	Factor -> Primary                                  (27)
	Primary -> Primary '(' ExpList ')'                 (28)
	Primary -> '(' ExpList ')'                         (29)
	Primary -> digits                                  (30)
	Primary -> true                                    (31)
	Primary -> false                                   (32)
	Primary -> '-' Primary                             (33)
	Primary -> '!' Primary                             (34)
	Primary -> id                                      (35)
	Primary -> '(' Exp ')'                             (36)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	function       { TokenKeyword "function" }
	if             { TokenKeyword "if" }
	else           { TokenKeyword "else" }
	true           { TokenKeyword "true" }
	false          { TokenKeyword "false" }
	var            { TokenKeyword "var" }
	';'            { Symbol ";" }
	id             { TokenIdent $$ }
	digits         { Digits $$ }
	'='            { Symbol "=" }
	'+'            { Symbol "+" }
	'-'            { Symbol "-" }
	'*'            { Symbol "*" }
	'/'            { Symbol "/" }
	'<'            { Symbol "<" }
	'>'            { Symbol ">" }
	'<='           { Symbol "<=" }
	'>='           { Symbol ">=" }
	'=='           { Symbol "==" }
	'&&'           { Symbol "&&" }
	'!'            { Symbol "!" }
	'||'           { Symbol "||" }
	'('            { Symbol "(" }
	')'            { Symbol ")" }
	'{'            { Symbol "{" }
	'}'            { Symbol "}" }
	','            { Symbol "," }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parser   rule  0
	Exp             rules 1, 2, 3, 4
	ExpList         rules 5, 6
	Pattern         rules 7, 8, 9
	PatternList     rules 10, 11
	Or              rules 12, 13
	And             rules 14, 15
	Comp            rules 16, 17, 18, 19, 20, 21
	Term            rules 22, 23, 24
	Factor          rules 25, 26, 27
	Primary         rules 28, 29, 30, 31, 32, 33, 34, 35, 36

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	function       shift, and enter state 2
	if             shift, and enter state 10
	true           shift, and enter state 11
	false          shift, and enter state 12
	var            shift, and enter state 13
	id             shift, and enter state 14
	digits         shift, and enter state 15
	'-'            shift, and enter state 16
	'!'            shift, and enter state 17
	'('            shift, and enter state 18

	Exp            goto state 3
	Or             goto state 4
	And            goto state 5
	Comp           goto state 6
	Term           goto state 7
	Factor         goto state 8
	Primary        goto state 9

State 1


	function       shift, and enter state 2


State 2

	Exp -> function . '(' PatternList ')' '{' Exp '}'    (rule 1)

	'('            shift, and enter state 39


State 3

	%start_parser -> Exp .                              (rule 0)

	%eof           accept


State 4

	Exp -> Or .                                         (rule 4)
	Or -> Or . '||' And                                 (rule 12)

	';'            reduce using rule 4
	'||'           shift, and enter state 38
	')'            reduce using rule 4
	'}'            reduce using rule 4
	','            reduce using rule 4
	%eof           reduce using rule 4


State 5

	Or -> And .                                         (rule 13)
	And -> And . '&&' Comp                              (rule 14)

	';'            reduce using rule 13
	'&&'           shift, and enter state 37
	'||'           reduce using rule 13
	')'            reduce using rule 13
	'}'            reduce using rule 13
	','            reduce using rule 13
	%eof           reduce using rule 13


State 6

	And -> Comp .                                       (rule 15)
	Comp -> Comp . '==' Term                            (rule 16)
	Comp -> Comp . '<' Term                             (rule 17)
	Comp -> Comp . '>' Term                             (rule 18)
	Comp -> Comp . '<=' Term                            (rule 19)
	Comp -> Comp . '>=' Term                            (rule 20)

	';'            reduce using rule 15
	'<'            shift, and enter state 32
	'>'            shift, and enter state 33
	'<='           shift, and enter state 34
	'>='           shift, and enter state 35
	'=='           shift, and enter state 36
	'&&'           reduce using rule 15
	'||'           reduce using rule 15
	')'            reduce using rule 15
	'}'            reduce using rule 15
	','            reduce using rule 15
	%eof           reduce using rule 15


State 7

	Comp -> Term .                                      (rule 21)
	Term -> Term . '+' Factor                           (rule 22)
	Term -> Term . '-' Factor                           (rule 23)

	';'            reduce using rule 21
	'+'            shift, and enter state 30
	'-'            shift, and enter state 31
	'<'            reduce using rule 21
	'>'            reduce using rule 21
	'<='           reduce using rule 21
	'>='           reduce using rule 21
	'=='           reduce using rule 21
	'&&'           reduce using rule 21
	'||'           reduce using rule 21
	')'            reduce using rule 21
	'}'            reduce using rule 21
	','            reduce using rule 21
	%eof           reduce using rule 21


State 8

	Term -> Factor .                                    (rule 24)
	Factor -> Factor . '*' Primary                      (rule 25)
	Factor -> Factor . '/' Primary                      (rule 26)

	';'            reduce using rule 24
	'+'            reduce using rule 24
	'-'            reduce using rule 24
	'*'            shift, and enter state 28
	'/'            shift, and enter state 29
	'<'            reduce using rule 24
	'>'            reduce using rule 24
	'<='           reduce using rule 24
	'>='           reduce using rule 24
	'=='           reduce using rule 24
	'&&'           reduce using rule 24
	'||'           reduce using rule 24
	')'            reduce using rule 24
	'}'            reduce using rule 24
	','            reduce using rule 24
	%eof           reduce using rule 24


State 9

	Factor -> Primary .                                 (rule 27)
	Primary -> Primary . '(' ExpList ')'                (rule 28)

	';'            reduce using rule 27
	'+'            reduce using rule 27
	'-'            reduce using rule 27
	'*'            reduce using rule 27
	'/'            reduce using rule 27
	'<'            reduce using rule 27
	'>'            reduce using rule 27
	'<='           reduce using rule 27
	'>='           reduce using rule 27
	'=='           reduce using rule 27
	'&&'           reduce using rule 27
	'||'           reduce using rule 27
	'('            shift, and enter state 27
	')'            reduce using rule 27
	'}'            reduce using rule 27
	','            reduce using rule 27
	%eof           reduce using rule 27


State 10

	Exp -> if . '(' Exp ')' Exp ';' else Exp            (rule 3)

	'('            shift, and enter state 26


State 11

	Primary -> true .                                   (rule 31)

	';'            reduce using rule 31
	'+'            reduce using rule 31
	'-'            reduce using rule 31
	'*'            reduce using rule 31
	'/'            reduce using rule 31
	'<'            reduce using rule 31
	'>'            reduce using rule 31
	'<='           reduce using rule 31
	'>='           reduce using rule 31
	'=='           reduce using rule 31
	'&&'           reduce using rule 31
	'||'           reduce using rule 31
	'('            reduce using rule 31
	')'            reduce using rule 31
	'}'            reduce using rule 31
	','            reduce using rule 31
	%eof           reduce using rule 31


State 12

	Primary -> false .                                  (rule 32)

	';'            reduce using rule 32
	'+'            reduce using rule 32
	'-'            reduce using rule 32
	'*'            reduce using rule 32
	'/'            reduce using rule 32
	'<'            reduce using rule 32
	'>'            reduce using rule 32
	'<='           reduce using rule 32
	'>='           reduce using rule 32
	'=='           reduce using rule 32
	'&&'           reduce using rule 32
	'||'           reduce using rule 32
	'('            reduce using rule 32
	')'            reduce using rule 32
	'}'            reduce using rule 32
	','            reduce using rule 32
	%eof           reduce using rule 32


State 13

	Exp -> var . Pattern '=' Exp ';' Exp                (rule 2)

	id             shift, and enter state 24
	'('            shift, and enter state 25

	Pattern        goto state 23

State 14

	Primary -> id .                                     (rule 35)

	';'            reduce using rule 35
	'+'            reduce using rule 35
	'-'            reduce using rule 35
	'*'            reduce using rule 35
	'/'            reduce using rule 35
	'<'            reduce using rule 35
	'>'            reduce using rule 35
	'<='           reduce using rule 35
	'>='           reduce using rule 35
	'=='           reduce using rule 35
	'&&'           reduce using rule 35
	'||'           reduce using rule 35
	'('            reduce using rule 35
	')'            reduce using rule 35
	'}'            reduce using rule 35
	','            reduce using rule 35
	%eof           reduce using rule 35


State 15

	Primary -> digits .                                 (rule 30)

	';'            reduce using rule 30
	'+'            reduce using rule 30
	'-'            reduce using rule 30
	'*'            reduce using rule 30
	'/'            reduce using rule 30
	'<'            reduce using rule 30
	'>'            reduce using rule 30
	'<='           reduce using rule 30
	'>='           reduce using rule 30
	'=='           reduce using rule 30
	'&&'           reduce using rule 30
	'||'           reduce using rule 30
	'('            reduce using rule 30
	')'            reduce using rule 30
	'}'            reduce using rule 30
	','            reduce using rule 30
	%eof           reduce using rule 30


State 16

	Primary -> '-' . Primary                            (rule 33)

	true           shift, and enter state 11
	false          shift, and enter state 12
	id             shift, and enter state 14
	digits         shift, and enter state 15
	'-'            shift, and enter state 16
	'!'            shift, and enter state 17
	'('            shift, and enter state 18

	Primary        goto state 22

State 17

	Primary -> '!' . Primary                            (rule 34)

	true           shift, and enter state 11
	false          shift, and enter state 12
	id             shift, and enter state 14
	digits         shift, and enter state 15
	'-'            shift, and enter state 16
	'!'            shift, and enter state 17
	'('            shift, and enter state 18

	Primary        goto state 21

State 18

	Primary -> '(' . ExpList ')'                        (rule 29)
	Primary -> '(' . Exp ')'                            (rule 36)

	function       shift, and enter state 2
	if             shift, and enter state 10
	true           shift, and enter state 11
	false          shift, and enter state 12
	var            shift, and enter state 13
	id             shift, and enter state 14
	digits         shift, and enter state 15
	'-'            shift, and enter state 16
	'!'            shift, and enter state 17
	'('            shift, and enter state 18

	Exp            goto state 19
	ExpList        goto state 20
	Or             goto state 4
	And            goto state 5
	Comp           goto state 6
	Term           goto state 7
	Factor         goto state 8
	Primary        goto state 9

State 19

	ExpList -> Exp .                                    (rule 5)
	Primary -> '(' Exp . ')'                            (rule 36)

	')'            shift, and enter state 61
			(reduce using rule 5)

	','            reduce using rule 5


State 20

	ExpList -> ExpList . ',' Exp                        (rule 6)
	Primary -> '(' ExpList . ')'                        (rule 29)

	')'            shift, and enter state 59
	','            shift, and enter state 60


State 21

	Primary -> Primary . '(' ExpList ')'                (rule 28)
	Primary -> '!' Primary .                            (rule 34)

	';'            reduce using rule 34
	'+'            reduce using rule 34
	'-'            reduce using rule 34
	'*'            reduce using rule 34
	'/'            reduce using rule 34
	'<'            reduce using rule 34
	'>'            reduce using rule 34
	'<='           reduce using rule 34
	'>='           reduce using rule 34
	'=='           reduce using rule 34
	'&&'           reduce using rule 34
	'||'           reduce using rule 34
	'('            shift, and enter state 27
			(reduce using rule 34)

	')'            reduce using rule 34
	'}'            reduce using rule 34
	','            reduce using rule 34
	%eof           reduce using rule 34


State 22

	Primary -> Primary . '(' ExpList ')'                (rule 28)
	Primary -> '-' Primary .                            (rule 33)

	';'            reduce using rule 33
	'+'            reduce using rule 33
	'-'            reduce using rule 33
	'*'            reduce using rule 33
	'/'            reduce using rule 33
	'<'            reduce using rule 33
	'>'            reduce using rule 33
	'<='           reduce using rule 33
	'>='           reduce using rule 33
	'=='           reduce using rule 33
	'&&'           reduce using rule 33
	'||'           reduce using rule 33
	'('            shift, and enter state 27
			(reduce using rule 33)

	')'            reduce using rule 33
	'}'            reduce using rule 33
	','            reduce using rule 33
	%eof           reduce using rule 33


State 23

	Exp -> var Pattern . '=' Exp ';' Exp                (rule 2)

	'='            shift, and enter state 58


State 24

	Pattern -> id .                                     (rule 7)

	'='            reduce using rule 7
	')'            reduce using rule 7
	','            reduce using rule 7


State 25

	Pattern -> '(' . Pattern ')'                        (rule 8)
	Pattern -> '(' . PatternList ')'                    (rule 9)

	id             shift, and enter state 24
	'('            shift, and enter state 25

	Pattern        goto state 56
	PatternList    goto state 57

State 26

	Exp -> if '(' . Exp ')' Exp ';' else Exp            (rule 3)

	function       shift, and enter state 2
	if             shift, and enter state 10
	true           shift, and enter state 11
	false          shift, and enter state 12
	var            shift, and enter state 13
	id             shift, and enter state 14
	digits         shift, and enter state 15
	'-'            shift, and enter state 16
	'!'            shift, and enter state 17
	'('            shift, and enter state 18

	Exp            goto state 55
	Or             goto state 4
	And            goto state 5
	Comp           goto state 6
	Term           goto state 7
	Factor         goto state 8
	Primary        goto state 9

State 27

	Primary -> Primary '(' . ExpList ')'                (rule 28)

	function       shift, and enter state 2
	if             shift, and enter state 10
	true           shift, and enter state 11
	false          shift, and enter state 12
	var            shift, and enter state 13
	id             shift, and enter state 14
	digits         shift, and enter state 15
	'-'            shift, and enter state 16
	'!'            shift, and enter state 17
	'('            shift, and enter state 18

	Exp            goto state 53
	ExpList        goto state 54
	Or             goto state 4
	And            goto state 5
	Comp           goto state 6
	Term           goto state 7
	Factor         goto state 8
	Primary        goto state 9

State 28

	Factor -> Factor '*' . Primary                      (rule 25)

	true           shift, and enter state 11
	false          shift, and enter state 12
	id             shift, and enter state 14
	digits         shift, and enter state 15
	'-'            shift, and enter state 16
	'!'            shift, and enter state 17
	'('            shift, and enter state 18

	Primary        goto state 52

State 29

	Factor -> Factor '/' . Primary                      (rule 26)

	true           shift, and enter state 11
	false          shift, and enter state 12
	id             shift, and enter state 14
	digits         shift, and enter state 15
	'-'            shift, and enter state 16
	'!'            shift, and enter state 17
	'('            shift, and enter state 18

	Primary        goto state 51

State 30

	Term -> Term '+' . Factor                           (rule 22)

	true           shift, and enter state 11
	false          shift, and enter state 12
	id             shift, and enter state 14
	digits         shift, and enter state 15
	'-'            shift, and enter state 16
	'!'            shift, and enter state 17
	'('            shift, and enter state 18

	Factor         goto state 50
	Primary        goto state 9

State 31

	Term -> Term '-' . Factor                           (rule 23)

	true           shift, and enter state 11
	false          shift, and enter state 12
	id             shift, and enter state 14
	digits         shift, and enter state 15
	'-'            shift, and enter state 16
	'!'            shift, and enter state 17
	'('            shift, and enter state 18

	Factor         goto state 49
	Primary        goto state 9

State 32

	Comp -> Comp '<' . Term                             (rule 17)

	true           shift, and enter state 11
	false          shift, and enter state 12
	id             shift, and enter state 14
	digits         shift, and enter state 15
	'-'            shift, and enter state 16
	'!'            shift, and enter state 17
	'('            shift, and enter state 18

	Term           goto state 48
	Factor         goto state 8
	Primary        goto state 9

State 33

	Comp -> Comp '>' . Term                             (rule 18)

	true           shift, and enter state 11
	false          shift, and enter state 12
	id             shift, and enter state 14
	digits         shift, and enter state 15
	'-'            shift, and enter state 16
	'!'            shift, and enter state 17
	'('            shift, and enter state 18

	Term           goto state 47
	Factor         goto state 8
	Primary        goto state 9

State 34

	Comp -> Comp '<=' . Term                            (rule 19)

	true           shift, and enter state 11
	false          shift, and enter state 12
	id             shift, and enter state 14
	digits         shift, and enter state 15
	'-'            shift, and enter state 16
	'!'            shift, and enter state 17
	'('            shift, and enter state 18

	Term           goto state 46
	Factor         goto state 8
	Primary        goto state 9

State 35

	Comp -> Comp '>=' . Term                            (rule 20)

	true           shift, and enter state 11
	false          shift, and enter state 12
	id             shift, and enter state 14
	digits         shift, and enter state 15
	'-'            shift, and enter state 16
	'!'            shift, and enter state 17
	'('            shift, and enter state 18

	Term           goto state 45
	Factor         goto state 8
	Primary        goto state 9

State 36

	Comp -> Comp '==' . Term                            (rule 16)

	true           shift, and enter state 11
	false          shift, and enter state 12
	id             shift, and enter state 14
	digits         shift, and enter state 15
	'-'            shift, and enter state 16
	'!'            shift, and enter state 17
	'('            shift, and enter state 18

	Term           goto state 44
	Factor         goto state 8
	Primary        goto state 9

State 37

	And -> And '&&' . Comp                              (rule 14)

	true           shift, and enter state 11
	false          shift, and enter state 12
	id             shift, and enter state 14
	digits         shift, and enter state 15
	'-'            shift, and enter state 16
	'!'            shift, and enter state 17
	'('            shift, and enter state 18

	Comp           goto state 43
	Term           goto state 7
	Factor         goto state 8
	Primary        goto state 9

State 38

	Or -> Or '||' . And                                 (rule 12)

	true           shift, and enter state 11
	false          shift, and enter state 12
	id             shift, and enter state 14
	digits         shift, and enter state 15
	'-'            shift, and enter state 16
	'!'            shift, and enter state 17
	'('            shift, and enter state 18

	And            goto state 42
	Comp           goto state 6
	Term           goto state 7
	Factor         goto state 8
	Primary        goto state 9

State 39

	Exp -> function '(' . PatternList ')' '{' Exp '}'    (rule 1)

	id             shift, and enter state 24
	'('            shift, and enter state 25

	Pattern        goto state 40
	PatternList    goto state 41

State 40

	PatternList -> Pattern .                            (rule 10)

	')'            reduce using rule 10
	','            reduce using rule 10


State 41

	Exp -> function '(' PatternList . ')' '{' Exp '}'    (rule 1)
	PatternList -> PatternList . ',' Pattern            (rule 11)

	')'            shift, and enter state 69
	','            shift, and enter state 65


State 42

	Or -> Or '||' And .                                 (rule 12)
	And -> And . '&&' Comp                              (rule 14)

	';'            reduce using rule 12
	'&&'           shift, and enter state 37
	'||'           reduce using rule 12
	')'            reduce using rule 12
	'}'            reduce using rule 12
	','            reduce using rule 12
	%eof           reduce using rule 12


State 43

	And -> And '&&' Comp .                              (rule 14)
	Comp -> Comp . '==' Term                            (rule 16)
	Comp -> Comp . '<' Term                             (rule 17)
	Comp -> Comp . '>' Term                             (rule 18)
	Comp -> Comp . '<=' Term                            (rule 19)
	Comp -> Comp . '>=' Term                            (rule 20)

	';'            reduce using rule 14
	'<'            shift, and enter state 32
	'>'            shift, and enter state 33
	'<='           shift, and enter state 34
	'>='           shift, and enter state 35
	'=='           shift, and enter state 36
	'&&'           reduce using rule 14
	'||'           reduce using rule 14
	')'            reduce using rule 14
	'}'            reduce using rule 14
	','            reduce using rule 14
	%eof           reduce using rule 14


State 44

	Comp -> Comp '==' Term .                            (rule 16)
	Term -> Term . '+' Factor                           (rule 22)
	Term -> Term . '-' Factor                           (rule 23)

	';'            reduce using rule 16
	'+'            shift, and enter state 30
	'-'            shift, and enter state 31
	'<'            reduce using rule 16
	'>'            reduce using rule 16
	'<='           reduce using rule 16
	'>='           reduce using rule 16
	'=='           reduce using rule 16
	'&&'           reduce using rule 16
	'||'           reduce using rule 16
	')'            reduce using rule 16
	'}'            reduce using rule 16
	','            reduce using rule 16
	%eof           reduce using rule 16


State 45

	Comp -> Comp '>=' Term .                            (rule 20)
	Term -> Term . '+' Factor                           (rule 22)
	Term -> Term . '-' Factor                           (rule 23)

	';'            reduce using rule 20
	'+'            shift, and enter state 30
	'-'            shift, and enter state 31
	'<'            reduce using rule 20
	'>'            reduce using rule 20
	'<='           reduce using rule 20
	'>='           reduce using rule 20
	'=='           reduce using rule 20
	'&&'           reduce using rule 20
	'||'           reduce using rule 20
	')'            reduce using rule 20
	'}'            reduce using rule 20
	','            reduce using rule 20
	%eof           reduce using rule 20


State 46

	Comp -> Comp '<=' Term .                            (rule 19)
	Term -> Term . '+' Factor                           (rule 22)
	Term -> Term . '-' Factor                           (rule 23)

	';'            reduce using rule 19
	'+'            shift, and enter state 30
	'-'            shift, and enter state 31
	'<'            reduce using rule 19
	'>'            reduce using rule 19
	'<='           reduce using rule 19
	'>='           reduce using rule 19
	'=='           reduce using rule 19
	'&&'           reduce using rule 19
	'||'           reduce using rule 19
	')'            reduce using rule 19
	'}'            reduce using rule 19
	','            reduce using rule 19
	%eof           reduce using rule 19


State 47

	Comp -> Comp '>' Term .                             (rule 18)
	Term -> Term . '+' Factor                           (rule 22)
	Term -> Term . '-' Factor                           (rule 23)

	';'            reduce using rule 18
	'+'            shift, and enter state 30
	'-'            shift, and enter state 31
	'<'            reduce using rule 18
	'>'            reduce using rule 18
	'<='           reduce using rule 18
	'>='           reduce using rule 18
	'=='           reduce using rule 18
	'&&'           reduce using rule 18
	'||'           reduce using rule 18
	')'            reduce using rule 18
	'}'            reduce using rule 18
	','            reduce using rule 18
	%eof           reduce using rule 18


State 48

	Comp -> Comp '<' Term .                             (rule 17)
	Term -> Term . '+' Factor                           (rule 22)
	Term -> Term . '-' Factor                           (rule 23)

	';'            reduce using rule 17
	'+'            shift, and enter state 30
	'-'            shift, and enter state 31
	'<'            reduce using rule 17
	'>'            reduce using rule 17
	'<='           reduce using rule 17
	'>='           reduce using rule 17
	'=='           reduce using rule 17
	'&&'           reduce using rule 17
	'||'           reduce using rule 17
	')'            reduce using rule 17
	'}'            reduce using rule 17
	','            reduce using rule 17
	%eof           reduce using rule 17


State 49

	Term -> Term '-' Factor .                           (rule 23)
	Factor -> Factor . '*' Primary                      (rule 25)
	Factor -> Factor . '/' Primary                      (rule 26)

	';'            reduce using rule 23
	'+'            reduce using rule 23
	'-'            reduce using rule 23
	'*'            shift, and enter state 28
	'/'            shift, and enter state 29
	'<'            reduce using rule 23
	'>'            reduce using rule 23
	'<='           reduce using rule 23
	'>='           reduce using rule 23
	'=='           reduce using rule 23
	'&&'           reduce using rule 23
	'||'           reduce using rule 23
	')'            reduce using rule 23
	'}'            reduce using rule 23
	','            reduce using rule 23
	%eof           reduce using rule 23


State 50

	Term -> Term '+' Factor .                           (rule 22)
	Factor -> Factor . '*' Primary                      (rule 25)
	Factor -> Factor . '/' Primary                      (rule 26)

	';'            reduce using rule 22
	'+'            reduce using rule 22
	'-'            reduce using rule 22
	'*'            shift, and enter state 28
	'/'            shift, and enter state 29
	'<'            reduce using rule 22
	'>'            reduce using rule 22
	'<='           reduce using rule 22
	'>='           reduce using rule 22
	'=='           reduce using rule 22
	'&&'           reduce using rule 22
	'||'           reduce using rule 22
	')'            reduce using rule 22
	'}'            reduce using rule 22
	','            reduce using rule 22
	%eof           reduce using rule 22


State 51

	Factor -> Factor '/' Primary .                      (rule 26)
	Primary -> Primary . '(' ExpList ')'                (rule 28)

	';'            reduce using rule 26
	'+'            reduce using rule 26
	'-'            reduce using rule 26
	'*'            reduce using rule 26
	'/'            reduce using rule 26
	'<'            reduce using rule 26
	'>'            reduce using rule 26
	'<='           reduce using rule 26
	'>='           reduce using rule 26
	'=='           reduce using rule 26
	'&&'           reduce using rule 26
	'||'           reduce using rule 26
	'('            shift, and enter state 27
	')'            reduce using rule 26
	'}'            reduce using rule 26
	','            reduce using rule 26
	%eof           reduce using rule 26


State 52

	Factor -> Factor '*' Primary .                      (rule 25)
	Primary -> Primary . '(' ExpList ')'                (rule 28)

	';'            reduce using rule 25
	'+'            reduce using rule 25
	'-'            reduce using rule 25
	'*'            reduce using rule 25
	'/'            reduce using rule 25
	'<'            reduce using rule 25
	'>'            reduce using rule 25
	'<='           reduce using rule 25
	'>='           reduce using rule 25
	'=='           reduce using rule 25
	'&&'           reduce using rule 25
	'||'           reduce using rule 25
	'('            shift, and enter state 27
	')'            reduce using rule 25
	'}'            reduce using rule 25
	','            reduce using rule 25
	%eof           reduce using rule 25


State 53

	ExpList -> Exp .                                    (rule 5)

	')'            reduce using rule 5
	','            reduce using rule 5


State 54

	ExpList -> ExpList . ',' Exp                        (rule 6)
	Primary -> Primary '(' ExpList . ')'                (rule 28)

	')'            shift, and enter state 68
	','            shift, and enter state 60


State 55

	Exp -> if '(' Exp . ')' Exp ';' else Exp            (rule 3)

	')'            shift, and enter state 67


State 56

	Pattern -> '(' Pattern . ')'                        (rule 8)
	PatternList -> Pattern .                            (rule 10)

	')'            shift, and enter state 66
			(reduce using rule 10)

	','            reduce using rule 10


State 57

	Pattern -> '(' PatternList . ')'                    (rule 9)
	PatternList -> PatternList . ',' Pattern            (rule 11)

	')'            shift, and enter state 64
	','            shift, and enter state 65


State 58

	Exp -> var Pattern '=' . Exp ';' Exp                (rule 2)

	function       shift, and enter state 2
	if             shift, and enter state 10
	true           shift, and enter state 11
	false          shift, and enter state 12
	var            shift, and enter state 13
	id             shift, and enter state 14
	digits         shift, and enter state 15
	'-'            shift, and enter state 16
	'!'            shift, and enter state 17
	'('            shift, and enter state 18

	Exp            goto state 63
	Or             goto state 4
	And            goto state 5
	Comp           goto state 6
	Term           goto state 7
	Factor         goto state 8
	Primary        goto state 9

State 59

	Primary -> '(' ExpList ')' .                        (rule 29)

	';'            reduce using rule 29
	'+'            reduce using rule 29
	'-'            reduce using rule 29
	'*'            reduce using rule 29
	'/'            reduce using rule 29
	'<'            reduce using rule 29
	'>'            reduce using rule 29
	'<='           reduce using rule 29
	'>='           reduce using rule 29
	'=='           reduce using rule 29
	'&&'           reduce using rule 29
	'||'           reduce using rule 29
	'('            reduce using rule 29
	')'            reduce using rule 29
	'}'            reduce using rule 29
	','            reduce using rule 29
	%eof           reduce using rule 29


State 60

	ExpList -> ExpList ',' . Exp                        (rule 6)

	function       shift, and enter state 2
	if             shift, and enter state 10
	true           shift, and enter state 11
	false          shift, and enter state 12
	var            shift, and enter state 13
	id             shift, and enter state 14
	digits         shift, and enter state 15
	'-'            shift, and enter state 16
	'!'            shift, and enter state 17
	'('            shift, and enter state 18

	Exp            goto state 62
	Or             goto state 4
	And            goto state 5
	Comp           goto state 6
	Term           goto state 7
	Factor         goto state 8
	Primary        goto state 9

State 61

	Primary -> '(' Exp ')' .                            (rule 36)

	';'            reduce using rule 36
	'+'            reduce using rule 36
	'-'            reduce using rule 36
	'*'            reduce using rule 36
	'/'            reduce using rule 36
	'<'            reduce using rule 36
	'>'            reduce using rule 36
	'<='           reduce using rule 36
	'>='           reduce using rule 36
	'=='           reduce using rule 36
	'&&'           reduce using rule 36
	'||'           reduce using rule 36
	'('            reduce using rule 36
	')'            reduce using rule 36
	'}'            reduce using rule 36
	','            reduce using rule 36
	%eof           reduce using rule 36


State 62

	ExpList -> ExpList ',' Exp .                        (rule 6)

	')'            reduce using rule 6
	','            reduce using rule 6


State 63

	Exp -> var Pattern '=' Exp . ';' Exp                (rule 2)

	';'            shift, and enter state 73


State 64

	Pattern -> '(' PatternList ')' .                    (rule 9)

	'='            reduce using rule 9
	')'            reduce using rule 9
	','            reduce using rule 9


State 65

	PatternList -> PatternList ',' . Pattern            (rule 11)

	id             shift, and enter state 24
	'('            shift, and enter state 25

	Pattern        goto state 72

State 66

	Pattern -> '(' Pattern ')' .                        (rule 8)

	'='            reduce using rule 8
	')'            reduce using rule 8
	','            reduce using rule 8


State 67

	Exp -> if '(' Exp ')' . Exp ';' else Exp            (rule 3)
